syntax = "proto3";
package todoPackage;

service Todo{
    rpc createTodo(TodoItem) returns (TodoItem);
}

message TodoItem{
    int32 id = 1;
    string text = 2;
}